# TT-cppEngine

Person/: CMakeLists.txt  Person.cc  Person.h  README.txt  hello_test.cc  main.cpp
TestsOnSquares/: CMakeLists.txt  Main.cpp  README.txt  SquareMaker.h
